[gd_scene load_steps=12 format=3 uid="uid://d3ovo2it7nbnh"]

[ext_resource type="Script" path="res://Character/airplane.gd" id="1_wihbf"]
[ext_resource type="PackedScene" uid="uid://d3qn3es4bmao8" path="res://Character/Airplane_Mesh.tscn" id="2_j34yd"]
[ext_resource type="AudioStream" uid="uid://c5bmui870wk38" path="res://Character/plane-engine.mp3" id="3_610pa"]
[ext_resource type="Script" path="res://Character/EngineSound.gd" id="4_874ub"]
[ext_resource type="Script" path="res://Character/BulletShooter.gd" id="5_3arig"]
[ext_resource type="AudioStream" uid="uid://b8gb10volhjm" path="res://Assets/SoundFX/laser-shot.wav" id="6_aojr6"]
[ext_resource type="Script" path="res://Character/FXParticleTrails.gd" id="7_p2f2j"]
[ext_resource type="Script" path="res://Character/FlightInstruments.gd" id="8_pncxi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gsjsx"]
radius = 0.259621
height = 1.07402

[sub_resource type="Animation" id="Animation_rrdoy"]
resource_name = "landing_gear_up"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Plane_Mesh/Landing_Gear_Back:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.97),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.530179, -2.40278e-08, -8.85073e-08)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Plane_Mesh/Landing_Gear_Back:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.97),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.00204349, 0.298476, -0.103187), Vector3(-0.00204347, 0.298476, 0.0202655)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Plane_Mesh/Landing_Gear_Right:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.97),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(7.47549e-08, -3.14159, -1.43038), Vector3(0, -3.14159, -3.15905)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Plane_Mesh/Landing_Gear_Left:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.97),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.50515e-07, 1.38955e-07, -1.49097)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Plane_Mesh/Landing_Gear_Left:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.06667, 1.97),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.00204349, 0.298476, -0.103187), Vector3(0.129166, 0.455617, -0.103187), Vector3(0.270866, 0.453894, -0.103187)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u80ly"]
_data = {
"landing_gear_up": SubResource("Animation_rrdoy")
}

[node name="Airplane" type="CharacterBody3D"]
script = ExtResource("1_wihbf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.91068e-15, 4.37114e-08, 1, 1, -4.37114e-08, 2.12779e-21, 4.37114e-08, 1, -4.37114e-08, 0.0113626, 0.271996, -0.0221037)
shape = SubResource("CapsuleShape3D_gsjsx")

[node name="Plane_Mesh" parent="." instance=ExtResource("2_j34yd")]
transform = Transform3D(-1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 0, 0, -0.0835133)

[node name="EngineSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_610pa")
volume_db = -17.802
pitch_scale = 0.82
parameters/looping = true
script = ExtResource("4_874ub")

[node name="BulletShooter" type="Node3D" parent="."]
script = ExtResource("5_3arig")

[node name="MuzzleLeft" type="Node3D" parent="BulletShooter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.424638, 0.197004, -0.264707)

[node name="MuzzleRight" type="Node3D" parent="BulletShooter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.394647, 0.178619, -0.264707)

[node name="ShootTimer" type="Timer" parent="BulletShooter"]

[node name="BulletSound" type="AudioStreamPlayer2D" parent="BulletShooter"]
stream = ExtResource("6_aojr6")

[node name="FXParticleTrails" type="Node" parent="."]
script = ExtResource("7_p2f2j")

[node name="FlightInstruments" type="Node" parent="."]
script = ExtResource("8_pncxi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u80ly")
}
